Fix: Update HTTP links to HTTPS in privacy and terms pages to resolve security warning

--- a/website/privacy.html
+++ b/website/privacy.html
@@ -99,7 +99,7 @@
             <p class="last-updated">Last Updated: March 26, 2025</p>
 
             <h2>Introduction</h2>
-            <p>Welcome to ManyChatBot's Privacy Policy. This Privacy Policy describes how ManyChatBot ("we," "our," or "us") collects, uses, and shares your personal information when you visit our website <a href="http://www.manychatbots.com">www.manychatbots.com</a> (the "Website"), use our services, or otherwise interact with us.</p>
+            <p>Welcome to ManyChatBot's Privacy Policy. This Privacy Policy describes how ManyChatBot ("we," "our," or "us") collects, uses, and shares your personal information when you visit our website <a href="https://www.manychatbots.com">www.manychatbots.com</a> (the "Website"), use our services, or otherwise interact with us.</p>
             
             <p>We respect your privacy and are committed to protecting your personal information. Please read this Privacy Policy carefully to understand our practices regarding your personal information and how we will treat it.</p>
 
