--- a/website/terms.html
+++ b/website/terms.html
@@ -99,7 +99,7 @@
             <p class="last-updated">Last Updated: March 26, 2025</p>
 
             <h2>1. Introduction</h2>
-            <p>Welcome to ManyChatBot. These Terms of Service ("Terms", "Terms of Service") govern your use of our website located at <a href="http://www.manychatbots.com">www.manychatbots.com</a> (the "Service") operated by ManyChatBot ("us", "we", or "our").</p>
+            <p>Welcome to ManyChatBot. These Terms of Service ("Terms", "Terms of Service") govern your use of our website located at <a href="https://www.manychatbots.com">www.manychatbots.com</a> (the "Service") operated by ManyChatBot ("us", "we", or "our").</p>
             
             <p>By accessing or using the Service, you agree to be bound by these Terms. If you disagree with any part of the terms, then you may not access the Service.</p>
 
